 Bug 540389 -  WARNING: Bad accessible tree! [tabbrowser tab], r=davidb, marcoz, mconnor